deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iis-helloworld  
spec:
  replicas: 6
  selector:
    matchLabels:
      app: iis-helloworld
  template:
    metadata:
      labels:
        app: iis-helloworld
    spec:
      nodeSelector:
        "kubernetes.io/os": windows
      containers:
      - name: iis-helloworld
        image: mcr.microsoft.com/windows/servercore/iis:windowsservercore-ltsc2019
        resources:
          limits:
            cpu: 1
            memory: 800M
          requests:
            cpu: .5
            memory: 400M
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: iis-helloworld
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: iis-helloworld
