ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: <KeyVaultCertificateUri>
  name: iis-app-routing
  namespace: iis-app-routing
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: webapp.ignitedemo.com
    http:
      paths:
      - backend:
          service:
            name: iis-app-routing
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - webapp.ignitedemo.com
    secretName: keyvault-aks-helloworld
